--- a/inicioFinal.css
+++ b/inicioFinal.css
@@ -2,17 +2,15 @@ body {
   text-align: center;
   background-image: url("imagenes/Fondo.png");
   margin: 0 0 0 0;
-  overflow: hidden;
+  overflow: hidden;  
 }
 
 h1 {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: gold;
-  margin-top: 0;
-  margin-left: 5px;
   text-align: center;
   font-size: 70px;
-  margin-bottom: 5px;
+  margin: 5px 0 2px 0px;
 }
 
 h2 {
@@ -30,9 +28,7 @@ h3 {
   color: black;
   text-align: center;
   font-size: 80px;
-  margin-top: 80px;
-  margin-left: 0;
-  margin-bottom: 40px;
+  margin: 60px 0 30px 0;
 }
 
 input:valid:required {
@@ -51,4 +47,19 @@ input:invalid:required {
 
 #image1 {
   width: 270px;
+}
+
+footer {
+  margin-top: 8px;  
+  background-color: grey;
+  color: black;
+  text-align: left;
+  height: 48px;
+}
+
+h4 {
+  font-size: 16px;
+  margin: 0px 0px 0px 10px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-weight: bold;
 }
