--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h2 {
 
 h3 {
   font-family: Arial, Helvetica, sans-serif;
+  /* ¿POR QUE NO VA HASTA EL BORDE? */
   background-image: linear-gradient(to right, gold, white);
   color: black;
   text-align: center;
