--- a/style.css
+++ b/style.css
@@ -8,11 +8,10 @@ body {
 h1 {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: gold;
-  margin-top: 0;
-  margin-left: 5px;
+  margin: 5px 0 2px 0;
   text-align: center;
   font-size: 70px;
-  margin-bottom: 5px;
+  
 }
 
 h2 {
@@ -26,14 +25,11 @@ h2 {
 
 h3 {
   font-family: Arial, Helvetica, sans-serif;
-  /* ¿POR QUE NO VA HASTA EL BORDE? */
   background-image: linear-gradient(to right, gold, white);
   color: black;
   text-align: center;
   font-size: 80px;
-  margin-top: 80px;
-  margin-left: 0;
-  margin-bottom: 40px;
+  margin: 60px 0 30px 0;
 }
 
 input:valid:required {
@@ -51,5 +47,20 @@ input:invalid:required {
 }
 
 #image1 {
-  width: 160px;
+  width: 270px;
+}
+
+footer {
+  margin-top: 8px;  
+  background-color: grey;
+  color: black;
+  text-align: left;
+  height: 48px;
+}
+
+h4 {
+  font-size: 16px;
+  margin: 0px 0px 0px 10px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-weight: bold;
 }
