--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   text-align: center;
   background-image: url("imagenes/Fondo.png");
   margin: 0 0 0 0;
-  overflow: hidden;  
+  overflow: hidden;
 }
 
 h1 {
@@ -50,7 +50,7 @@ input:invalid:required {
 }
 
 footer {
-  margin-top: 8px;  
+  margin-top: 8px;
   background-color: grey;
   color: black;
   text-align: left;
@@ -61,5 +61,10 @@ h4 {
   font-size: 16px;
   margin: 0px 0px 0px 10px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  font-weight: bold;
+}
+
+#submit-button {
+  background-color: #ff9900;
   font-weight: bold;
 }
