--- a/tatetiFinal.css
+++ b/tatetiFinal.css
@@ -40,18 +40,25 @@ h4 {
   margin-bottom: 8px;
 }
 
+#botonInicio {
+  background-color: orange; 
+  margin-top: 5px;
+}
+
 #botonLetraX {
   margin-top: 3px;
   margin-right: 8px;
   margin-left: 615px;
   width: 50px;
   height: 25px;
+  background-color: green;
 }
 
 #botonLetraO {
   margin-top: 3px;
   height: 25px;
   width: 50px;
+  background-color: red;
 }
 
 #letraelec {
@@ -73,12 +80,17 @@ h4 {
 .celda {
   display: none;
   float: left;
-  background: #fff;
+  background-color: #fff;
   height: 80px;
   width: 80px;
   border: solid 1px gray;
   font-size: 20pt;
   text-align: center;
+}
+
+.celda:hover {
+  border: 1px solid #900;
+  opacity: .8;
 }
 
 #ceroCero,
