--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ input:invalid:required {
 }
 
 footer {
-  margin-top: 8px;
+  margin-top: 11px;
   background-color: grey;
   color: black;
   text-align: left;
@@ -67,4 +67,5 @@ h4 {
 #submit-button {
   background-color: #ff9900;
   font-weight: bold;
+  border: none;
 }
